--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
     <!-- مؤشر مكتبة jQuery إذا كانت مطلوبة -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" href="img/logo.jpg" type="image/jpeg">
 </head>
 <body>
     <header id="main-header">
